--- a/app/views/listings/index.html.haml
+++ b/app/views/listings/index.html.haml
@@ -1,6 +1,11 @@
 .compact-header
   %h1 Switter Listings
 
+.flash-message
+  %p To have your toot appear here, it must include the "#swlisting" hashtag, "Location: [your location]" on its own line.
+  %p Listings last for 7 days.
+  %p Listings are a work in progress. Don't abuse this feature (post too often) otherwise you will be barred from this feature.
+
 = form_tag '/', method: 'GET', class: 'simple_form' do
   .fields-group
     .input.string.required
