Add a light theme

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -927,7 +927,7 @@
 .status__action-bar-counter {
   float: left;
   margin-right: 12px;
-  color: #d9e1e8;
+  color: $classic-primary-color;
   width: 23.15px;
 }
 
