--- a/app/views/stream_entries/_detailed_status.html.haml
+++ b/app/views/stream_entries/_detailed_status.html.haml
@@ -54,16 +54,13 @@
       = fa_icon('star')
       %span= status.favourites_count
 
-    - conversations = status.conversation.statuses.count
+    - conversations = status.conversation.statuses.without_reblogs.count
     - if conversations > 1
       ·
-      %span<
-        = fa_icon('comments')
-        %span= conversations - 1
+      = link_to TagManager.instance.url_for(status) do
+        %span<
+          = fa_icon('comments')
+          %span= conversations - 1
 
-    - if user_signed_in?
-      ·
-      = link_to t('statuses.reply'), web_url("statuses/#{status.id}"), class: 'open-in-web-link', target: '_blank'
-    - else
-      ·
-      = link_to t('statuses.reply'), TagManager.instance.url_for(status), class: 'open-in-web-link'
+    ·
+    = link_to t('statuses.reply'), web_url("statuses/#{status.id}"), class: 'open-in-web-link', target: '_blank'
