--- a/app/views/popular/index.html.haml
+++ b/app/views/popular/index.html.haml
@@ -1,6 +1,14 @@
 .compact-header
   %h1 Popular Toots
 
+.links
+  - if @page > 1
+    = link_to 'Newer', {page: @page - 1}, class: 'button'
+  - else
+    %br
+  = link_to 'Older', {page: @page + 1}, class: 'button'
+
+%br
 - @popular.each do |status|
   - cache status, expires_in: 5.minutes, race_condition_ttl: 5.seconds do
     .activity-stream.activity-stream-headless.h-entry
