Use i18n translation we got rid of on popular toots

--- a/app/views/stream_entries/_detailed_status.html.haml
+++ b/app/views/stream_entries/_detailed_status.html.haml
@@ -63,4 +63,4 @@
           %span= conversations - 1
 
     ·
-    = link_to t('statuses.reply'), web_url("statuses/#{status.id}"), class: 'open-in-web-link', target: '_blank'
+    = link_to t('statuses.reply'), web_url("statuses/#{status.id}"), class: 'open-in-web-link', target: '_blank', alt: t('statuses.open_in_web')
