--- a/app/views/admin/accounts/index.html.haml
+++ b/app/views/admin/accounts/index.html.haml
@@ -61,6 +61,8 @@
       %tr
         %th= t('admin.accounts.username')
         %th= t('admin.accounts.domain')
+        %th= t('admin.accounts.email')
+        %th= t('admin.accounts.status')
         %th
         %th
     %tbody
