--- a/app/views/admin/accounts/index.html.haml
+++ b/app/views/admin/accounts/index.html.haml
@@ -63,6 +63,7 @@
         %th= t('admin.accounts.domain')
         %th= t('admin.accounts.email')
         %th= t('admin.accounts.status')
+        %th= t('admin.accounts.age')
         %th
         %th
     %tbody
