--- a/app/views/admin/accounts/show.html.haml
+++ b/app/views/admin/accounts/show.html.haml
@@ -71,8 +71,8 @@
           %td
             = @account.user_current_sign_in_ip
             –
-            - total_accounts = User.confirmed.where.not(id: @account.user.id).with_recent_ip_address(@account.user_current_sign_in_ip).count
-            - suspended_accounts = User.confirmed.joins(:account).where.not(id: @account.user.id).with_recent_ip_address(@account.user_current_sign_in_ip).where('accounts.suspended = true').count
+            - total_accounts = @account.user ? User.confirmed.where.not(id: @account.user.id).with_recent_ip_address(@account.user_current_sign_in_ip).count : 0
+            - suspended_accounts = @account.user ? User.confirmed.joins(:account).where.not(id: @account.user.id).with_recent_ip_address(@account.user_current_sign_in_ip).where('accounts.suspended = true').count : 0
             = link_to "#{total_accounts} accounts, #{suspended_accounts} suspended", admin_accounts_path(ip: @account.user_current_sign_in_ip)
         %tr
           %th= t('admin.accounts.most_recent_activity')
