Group mod reports by IP and add quick mod buttons to drastically improve modding efficiency

--- a/app/views/admin/accounts/index.html.haml
+++ b/app/views/admin/accounts/index.html.haml
@@ -60,10 +60,10 @@
     %thead
       %tr
         %th= t('admin.accounts.username')
-        %th= t('admin.accounts.domain')
         %th= t('admin.accounts.email')
         %th= t('admin.accounts.status')
         %th= t('admin.accounts.age')
+        %th= t('admin.accounts.metrics')
         %th
         %th
     %tbody
