--- a/app/views/admin/accounts/_account.html.haml
+++ b/app/views/admin/accounts/_account.html.haml
@@ -1,17 +1,12 @@
 %tr
   %td.username
-    = link_to account.username, admin_account_path(account.id)
-  %td.domain
-    - unless account.local?
-      = link_to account.domain, admin_accounts_path(by_domain: account.domain)
+    = link_to account.acct, admin_account_path(account.id)
   %td.email
     = account.user&.email
   %td
-    - if account.suspended?
-      Suspended
-    - elsif account.user&.confirmed?
-      Confirmed
+    = account.state.to_s.titlecase
   %td= time_ago_in_words account.created_at
+  %td= [account.statuses_count, account.followers_count, account.following_count].join("–")
   %td
     - if account.local?
       - if account.user.nil?
