--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -1,6 +1,6 @@
 - content_for :header_tags do
   = javascript_pack_tag 'public', integrity: true, crossorigin: 'anonymous'
-
+  %script{src: 'https://code.jquery.com/jquery-3.3.1.min.js'}
 - content_for :content do
   .admin-wrapper
     .sidebar-wrapper
