--- a/app/views/admin/reports/index.html.haml
+++ b/app/views/admin/reports/index.html.haml
@@ -14,6 +14,7 @@
     %table.table
       %thead
         %tr
+          - t('admin.reports.id')
           %th= t('admin.reports.target')
           %th= t('admin.reports.reported_by')
           %th= t('admin.reports.report_contents')
