--- a/app/views/listings/new.html.haml
+++ b/app/views/listings/new.html.haml
@@ -1,5 +1,11 @@
 %h1 Post a listing
 
+%p
+  Check out&nbsp;
+  %a{href: "https://tryst.link", style: "color: #8aa2b8"}> Tryst.link
+  , the independent escort directory created by Assembly Four, the team behind Switter.
+%br
+
 %h3 Rules
 %ul
   %li Only providers may post a listing.
