--- a/app/views/tags/show.html.haml
+++ b/app/views/tags/show.html.haml
@@ -34,3 +34,8 @@
               %p= t 'about.about_mastodon_html'
 
               = render 'features'
+
+
+.landing-page__footer
+  %p
+    = link_to 'Tryst.link – the better Backpage alternative', 'https://tryst.link'
