--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,3 +27,7 @@
 
   %body{ class: add_rtl_body_class(body_classes) }
     = content_for?(:content) ? yield(:content) : yield
+
+    .landing-page__footer
+      %p
+        = link_to 'Tryst.link – the better Backpage alternative', 'https://tryst.link'
